--- a/index.html
+++ b/index.html
@@ -9,6 +9,48 @@
       document.getElementById("valueP").innerHTML = text;
     }
   </script>
+  <style>
+    html {
+      height: 100%;
+      font-family: sans-serif, Arial;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+
+    button {
+      background: #574b90;
+      color: #fff !important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 6px;
+      box-shadow: none;
+      border: 0 !important;
+      font-weight: 600;
+      height: 60px;
+      font-size: 18px;
+      padding: 0 40px;
+      max-width: 400px;
+      width: 100%;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #433971;
+    }
+
+    #valueP {
+      /* position: absolute; */
+      bottom:
+        /* font-size: 18px; */
+    }
+  </style>
 </head>
 
 <body>
